--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-size: clamp(8px, 2vw, 16px);
+    font-size: 16px;
 }
 
 a {
@@ -16,7 +16,7 @@ a {
 .citation-table {
     width: 100%;
     border-collapse: collapse;
-    font-size: inherit;
+    font-size: clamp(8px, 2vw, 16px);
     min-width: 300px;
 }
 
