--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,11 @@ a {
     padding: 0 15px;
 }
 
+
+.basic-table tr, .basic-table td {
+    padding: 2px 10px;
+}
+
 .citation-table {
     width: 100%;
     border-collapse: collapse;
