--- a/cardstyles.css
+++ b/cardstyles.css
@@ -55,6 +55,8 @@ body {
 }
 .secondary-link {
     position: relative;
+    font-size: 14px;
+    font-weight: bold;
     z-index: 2;
     text-decoration: underline;
     color: #28a745;
@@ -97,7 +99,7 @@ body {
     font-size: 14px;
     font-weight: bold;
     color: #28a745;
-    margin-left: 10px;
+    margin-left: 0px;
 }
 
 /* Media query for smaller screens */
